--- a/less/global.less
+++ b/less/global.less
@@ -6,11 +6,16 @@ html {
   font-size: 62.5%;
 }
 
-html, body {
+html,
+body {
   font-family: 'Roboto', sans-serif;
 }
 
-h1, h2, h3, h4, h5 {
+h1,
+h2,
+h3,
+h4,
+h5 {
   font-family: 'Indie Flower', cursive;
 }
 
@@ -19,28 +24,28 @@ h1 {
 }
 
 h2 {
-  font-size: 3.2rem;
+  font-size     : 3.2rem;
   padding-bottom: 10px;
 }
 
 h4 {
-  font-size: 2.5rem;
+  font-size     : 2.5rem;
   padding-bottom: 10px;
 }
 
 p {
-  line-height: 1.5;
-  font-size: 1.6rem;
+  line-height   : 1.5;
+  font-size     : 1.6rem;
   padding-bottom: 10px;
 }
 
 img {
   max-width: 100%;
-  height: auto;
+  height   : auto;
 }
 
 .container {
   max-width: 800px;
-  width: 100%;
-  margin: 0 auto;
+  width    : 100%;
+  margin   : 0 auto;
 }
