--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,20 +1,26 @@
 .home {
+  .header-section {
+    max-width    : 100%;
+    width        : 100%;
+    border-bottom: 2px dashed silver;
+    margin: 0;
+  }
 
   .content-section {
-    margin: 30px 0;
-    display: flex;
-    flex-wrap: wrap;
+    margin         : 30px 0;
+    display        : flex;
+    flex-wrap      : wrap;
     justify-content: space-between;
 
-   
-    
+
+
     .text-content {
-      width: 48%;
+      width        : 48%;
       padding-right: 1%;
     }
 
     .img-content {
-      width: 48%;
+      width       : 48%;
       padding-left: 1%;
 
       img {
@@ -25,21 +31,21 @@
 
   .inverse-content {
     padding-bottom: 30px;
-    border-bottom: 2px dashed @navigation-border;
+    border-bottom : 2px dashed @navigation-border;
 
     .text-content {
-      padding-left: 1%;
+      padding-left : 1%;
       padding-right: 0;
     }
 
     .img-content {
       padding-right: 1%;
-      padding-left: 0;
+      padding-left : 0;
     }
   }
 
   .content-destination {
-    width: 75%;
+    width : 75%;
     margin: 0 auto 30px;
 
     img {
@@ -48,14 +54,16 @@
   }
 
   .content-pick {
-    padding-top: 30px;
-    border-top: 2px dashed @navigation-border;
-    display: flex;
+    padding-top    : 30px;
+    border-top     : 2px dashed @navigation-border;
+    display        : flex;
     justify-content: space-between;
 
     .destination {
-      width: 30%;
+      width        : 30%;
       margin-bottom: 30px;
     }
   }
-}// home
+}
+
+// home
