--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,1 +1,6 @@
 // Mixins in here
+.nav-flex (@jc: space-between, @ai: center) {
+    display: flex;
+    justify-content: @jc;
+    align-items: @ai;
+}
