--- a/css/index.css
+++ b/css/index.css
@@ -179,11 +179,10 @@ img {
   font-size: 1.6rem;
   padding: 20px;
 }
-.home .header-section {
-  max-width: 100%;
+.header-section {
   width: 100%;
   border-bottom: 2px dashed silver;
-  margin: 0;
+  background: #FFEBCD;
 }
 .home .content-section {
   margin: 30px 0;
