--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,10 +1,10 @@
+
+.header-content {
+  width     : 100%;
+  border-top: 2px dashed silver;
+  background: @sandy-beach;
+
 .home {
-  .header-section {
-    max-width    : 100%;
-    width        : 100%;
-    border-bottom: 2px dashed silver;
-    margin: 0;
-  }
 
   .content-section {
     margin         : 30px 0;
