--- a/css/index.css
+++ b/css/index.css
@@ -168,6 +168,17 @@ img {
   width: 100%;
   margin: 0 auto;
 }
+.header-section {
+  width: 100%;
+  border-bottom: 2px dashed silver;
+}
+.header-section .header-content {
+  max-width: 800px;
+  width: 100%;
+  display: flex;
+  margin: 0 auto;
+  justify-content: space-between;
+}
 .footer {
   width: 100%;
   border-top: 2px dashed silver;
@@ -178,11 +189,6 @@ img {
   color: #212529;
   font-size: 1.6rem;
   padding: 20px;
-}
-.header-section {
-  width: 100%;
-  border-bottom: 2px dashed silver;
-  background: #FFEBCD;
 }
 .home .content-section {
   margin: 30px 0;
