--- a/css/index.css
+++ b/css/index.css
@@ -178,6 +178,18 @@ img {
   display: flex;
   margin: 0 auto;
   justify-content: space-between;
+  padding: 20px 0;
+}
+.header-section .header-content .header-nav {
+  width: 40%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.header-section .header-content a {
+  color: black;
+  text-decoration: none;
+  font-size: 1.4rem;
 }
 .footer {
   width: 100%;
