--- a/less/header.less
+++ b/less/header.less
@@ -1,14 +1,27 @@
 .header-section {
-    width     : 100%;
+    width        : 100%;
     border-bottom: 2px dashed silver;
-  
+
     .header-content {
-      max-width: 800px;
-      width: 100%;
-      display: flex;
-      margin: 0 auto;
-      justify-content: space-between;
-  
+        max-width      : 800px;
+        width          : 100%;
+        display        : flex;
+        margin         : 0 auto;
+        justify-content: space-between;
+        padding: 20px 0;
+
+        .header-nav {
+            width: 40%;
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+        }
+
+        a {
+            color: black;
+            text-decoration: none;
+            font-size: 1.4rem;
+        }
+
     }
-  }
-  
+}
