--- a/less/mixins.less
+++ b/less/mixins.less
@@ -4,3 +4,14 @@
     justify-content: @jc;
     align-items: @ai;
 }
+
+.btn-style () {
+    background: @button-bg;;
+    width: 90%;
+    height:35px;
+    color: @main-bg;
+    font-size: 17px;
+    border-radius: 7px;
+    margin: 10px auto;
+
+}
