Mobile mostly done

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -61,6 +61,20 @@
         .btn-style();
       }
     }
+
+    @media screen and (max-width:500px) {
+      flex-direction: column;
+      align-items: center;
+
+      .destination {
+        width: 70%;
+      }
+
+      .btn  {
+        
+      }  
+     
+    }
   }
 }
 
