--- a/css/index.css
+++ b/css/index.css
@@ -180,6 +180,15 @@ img {
   justify-content: space-between;
   padding: 20px 0;
 }
+@media screen and (max-width: 800px) {
+  .header-section .header-content {
+    flex-direction: column;
+    align-items: center;
+  }
+  .header-section .header-content .header-nav {
+    width: 100%;
+  }
+}
 .header-section .header-content .header-nav {
   width: 40%;
   display: flex;
@@ -256,4 +265,13 @@ img {
   font-size: 17px;
   border-radius: 7px;
   margin: 10px auto;
+}
+@media screen and (max-width: 500px) {
+  .home .content-pick {
+    flex-direction: column;
+    align-items: center;
+  }
+  .home .content-pick .destination {
+    width: 70%;
+  }
 }
