--- a/less/header.less
+++ b/less/header.less
@@ -1,3 +1,5 @@
+@mobile: ~'( max-width: 500px )';
+
 .header-section {
     width        : 100%;
     border-bottom: 2px dashed silver;
@@ -9,6 +11,15 @@
         margin         : 0 auto;
         justify-content: space-between;
         padding: 20px 0;
+
+        @media screen and ( max-width: 800px ) {
+            flex-direction: column;
+            align-items: center;
+
+            .header-nav {
+                width: 100%;
+            }
+        }
 
         .header-nav {
             width: 40%;
