--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,17 +1,18 @@
 // Mixins in here
 .nav-flex (@jc: space-between, @ai: center) {
-    display: flex;
+    display        : flex;
     justify-content: @jc;
-    align-items: @ai;
+    align-items    : @ai;
 }
 
 .btn-style () {
-    background: @button-bg;;
-    width: 90%;
-    height:35px;
-    color: @main-bg;
-    font-size: 17px;
+    background: @button-bg;
+    ;
+    width        : 90%;
+    height       : 35px;
+    color        : @main-bg;
+    font-size    : 17px;
     border-radius: 7px;
-    margin: 10px auto;
+    margin       : 10px auto;
 
 }
