--- a/less/header.less
+++ b/less/header.less
@@ -10,28 +10,28 @@
         display        : flex;
         margin         : 0 auto;
         justify-content: space-between;
-        padding: 20px 0;
+        padding        : 20px 0;
 
-        @media screen and ( max-width: 800px ) {
+        @media @mobile {
             flex-direction: column;
-            align-items: center;
+            align-items   : center;
+        }
 
-            .header-nav {
+        .header-nav {
+            width          : 40%;
+            display        : flex;
+            justify-content: space-around;
+            align-items    : center;
+
+            @media @mobile {
                 width: 100%;
             }
         }
 
-        .header-nav {
-            width: 40%;
-            display: flex;
-            justify-content: space-around;
-            align-items: center;
-        }
-
         a {
-            color: black;
+            color          : black;
             text-decoration: none;
-            font-size: 1.4rem;
+            font-size      : 1.4rem;
         }
 
     }
