--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,24 +1,44 @@
 .home {
 
+  @media @mobile {
+    width  : 100%;
+    padding: 0 20px;
+  }
+
   .content-section {
     margin         : 30px 0;
     display        : flex;
     flex-wrap      : wrap;
     justify-content: space-between;
 
-
+    @media @mobile {
+      flex-direction: column;
+      align-items   : center;
+    }
 
     .text-content {
       width        : 48%;
       padding-right: 1%;
+
+      @media @mobile {
+        width: 100%;
+      }
     }
 
     .img-content {
       width       : 48%;
       padding-left: 1%;
 
+      @media @mobile {
+        width: 100%;
+      }
+
       img {
         border-radius: 10px;
+
+        @media @mobile {
+          width: 100%;
+        }
       }
     }
   }
@@ -26,6 +46,12 @@
   .inverse-content {
     padding-bottom: 30px;
     border-bottom : 2px dashed @navigation-border;
+
+    @media @mobile {
+      width         : 100%;
+      flex-direction: column-reverse;
+      align-items   : center;
+    }
 
     .text-content {
       padding-left : 1%;
@@ -42,6 +68,10 @@
     width : 75%;
     margin: 0 auto 30px;
 
+    @media @mobile {
+      width: 100%;
+    }
+
     img {
       border-radius: 10px;
     }
@@ -56,24 +86,22 @@
     .destination {
       width        : 30%;
       margin-bottom: 30px;
-      
+
       .btn {
         .btn-style();
       }
     }
 
-    @media screen and (max-width:500px) {
+    @media @mobile {
       flex-direction: column;
-      align-items: center;
+      align-items   : center;
 
       .destination {
         width: 70%;
       }
 
-      .btn  {
-        
-      }  
-     
+      .btn {}
+
     }
   }
 }
