--- a/css/index.css
+++ b/css/index.css
@@ -135,6 +135,7 @@ html {
 html,
 body {
   font-family: 'Roboto', sans-serif;
+  padding: 0 20px;
 }
 h1,
 h2,
@@ -225,6 +226,11 @@ img {
   flex-wrap: wrap;
   justify-content: space-between;
 }
+@media (max-width: 760px) {
+  .home .content-section {
+    align-items: center;
+  }
+}
 @media ( max-width: 500px ) {
   .home .content-section {
     flex-direction: column;
@@ -280,7 +286,7 @@ img {
   width: 75%;
   margin: 0 auto 30px;
 }
-@media ( max-width: 500px ) {
+@media (max-width: 760px) {
   .home .content-destination {
     width: 100%;
   }
@@ -307,7 +313,10 @@ img {
   border-radius: 7px;
   margin: 10px auto;
 }
-@media ( max-width: 500px ) {
+.home .content-pick .destination .btn:hover {
+  background: #7adeee;
+}
+@media (max-width: 760px) {
   .home .content-pick {
     flex-direction: column;
     align-items: center;
