--- a/less/home-page.less
+++ b/less/home-page.less
@@ -11,6 +11,10 @@
     flex-wrap      : wrap;
     justify-content: space-between;
 
+    @media @tablet {
+      align-items: center;
+    }
+
     @media @mobile {
       flex-direction: column;
       align-items   : center;
@@ -68,7 +72,7 @@
     width : 75%;
     margin: 0 auto 30px;
 
-    @media @mobile {
+    @media @tablet {
       width: 100%;
     }
 
@@ -90,18 +94,20 @@
       .btn {
         .btn-style();
       }
+
+      .btn:hover {
+        .btn-hover();
+
+      }
     }
 
-    @media @mobile {
+    @media @tablet {
       flex-direction: column;
       align-items   : center;
 
       .destination {
         width: 70%;
       }
-
-      .btn {}
-
     }
   }
 }
